Fix dark mode tooltips.

--- a/docs/.vuepress/theme/styles/dark.pcss
+++ b/docs/.vuepress/theme/styles/dark.pcss
@@ -52,7 +52,6 @@
     }
 
     .nav-hamburger {
-      background-color: rgba(0, 0, 0, 0.2);
       span {
         background-color: #fff;
       }
@@ -100,6 +99,14 @@
       .suggestion-doc-set {
         @apply bg-cinder;
         color: #a0aec0;
+      }
+    }
+
+    .tooltip {
+      @apply bg-gray-800;
+
+      .tooltip-arrow {
+        @apply border-gray-800;
       }
     }
   }
